jayway and jsonPath

--- a/Eclipse_WS/Training/test-output/index.html
+++ b/Eclipse_WS/Training/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Aravind\AppData\Local\Temp\testng-eclipse-1968363838\testng-customsuite.xml</span>
+                    <span>C:\Users\Aravind\AppData\Local\Temp\testng-eclipse--341206730\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,37 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.filters.FiltersAndSpecForGit" class="method navigator-link" hash-for-method="getAllRepositories">getAllRepositories</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getAllBGIScaled">getAllBGIScaled</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.filters.FiltersAndSpecForGit" class="method navigator-link" hash-for-method="getRepository">getRepository</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getAllUrlWithWidthGreaterThan1000">getAllUrlWithWidthGreaterThan1000</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getAllUrlsFrombackgroundImageScaled">getAllUrlsFrombackgroundImageScaled</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getAllWidthGreaterThan1000">getAllWidthGreaterThan1000</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getFirstElementInBGIScaled">getFirstElementInBGIScaled</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getID">getID</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath" class="method navigator-link" hash-for-method="getName">getName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +151,56 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.synechron.restapi.Training.filters.FiltersAndSpecForGit</span>
+              <span class="class-name">com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAllRepositories">
-                  </a> <!-- getAllRepositories -->
-                  <span class="method-name">getAllRepositories</span>
+                  <a name="getAllBGIScaled">
+                  </a> <!-- getAllBGIScaled -->
+                  <span class="method-name">getAllBGIScaled</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getRepository">
-                  </a> <!-- getRepository -->
-                  <span class="method-name">getRepository</span>
+                  <a name="getAllUrlWithWidthGreaterThan1000">
+                  </a> <!-- getAllUrlWithWidthGreaterThan1000 -->
+                  <span class="method-name">getAllUrlWithWidthGreaterThan1000</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getAllUrlsFrombackgroundImageScaled">
+                  </a> <!-- getAllUrlsFrombackgroundImageScaled -->
+                  <span class="method-name">getAllUrlsFrombackgroundImageScaled</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getAllWidthGreaterThan1000">
+                  </a> <!-- getAllWidthGreaterThan1000 -->
+                  <span class="method-name">getAllWidthGreaterThan1000</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getFirstElementInBGIScaled">
+                  </a> <!-- getFirstElementInBGIScaled -->
+                  <span class="method-name">getFirstElementInBGIScaled</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getID">
+                  </a> <!-- getID -->
+                  <span class="method-name">getID</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getName">
+                  </a> <!-- getName -->
+                  <span class="method-name">getName</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +208,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Aravind\AppData\Local\Temp\testng-eclipse-1968363838\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Aravind\AppData\Local\Temp\testng-eclipse--341206730\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +217,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.synechron.restapi.Training.filters.FiltersAndSpecForGit&quot;/&gt;
+      &lt;class name=&quot;com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +257,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getAllRepositories')
-data.setCell(0, 2, 'com.synechron.restapi.Training.filters.FiltersAndSpecForGit')
-data.setCell(0, 3, 5294);
+data.setCell(0, 1, 'getAllBGIScaled')
+data.setCell(0, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(0, 3, 1052);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getRepository')
-data.setCell(1, 2, 'com.synechron.restapi.Training.filters.FiltersAndSpecForGit')
-data.setCell(1, 3, 469);
+data.setCell(1, 1, 'getAllUrlsFrombackgroundImageScaled')
+data.setCell(1, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(1, 3, 303);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'getAllUrlWithWidthGreaterThan1000')
+data.setCell(2, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(2, 3, 154);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'getName')
+data.setCell(3, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(3, 3, 50);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'getAllWidthGreaterThan1000')
+data.setCell(4, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(4, 3, 37);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'getFirstElementInBGIScaled')
+data.setCell(5, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(5, 3, 31);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'getID')
+data.setCell(6, 2, 'com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath')
+data.setCell(6, 3, 28);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,30 +316,94 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.synechron.restapi.Training.filters.FiltersAndSpecForGit</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">initConstants</span>
+              <div class="chronological-class-name">com.synechron.restapi.Training.response.jsonpath.ValidateResponseBodyUsingJsonPath</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">getResponse</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">3051 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">getAllRepositories</span>
-                <span class="method-start">1780 ms</span>
+                <span class="method-name">getAllBGIScaled</span>
+                <span class="method-start">3054 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">saveLogsToFile([TestResult name=getAllRepositories status=SUCCESS method=FiltersAndSpecForGit.getAllRepositories()[...)</span>
-                <span class="method-start">7087 ms</span>
+                <span class="method-name">afterTest([TestResult name=getAllBGIScaled status=SUCCESS method=ValidateResponseBodyUsingJsonPath.getAllBGISc...)</span>
+                <span class="method-start">4116 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">initConstants</span>
-                <span class="method-start">7161 ms</span>
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">4128 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">getRepository</span>
-                <span class="method-start">7168 ms</span>
+                <span class="method-name">getAllUrlWithWidthGreaterThan1000</span>
+                <span class="method-start">4129 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">saveLogsToFile([TestResult name=getRepository status=SUCCESS method=FiltersAndSpecForGit.getRepository()[pri:0, ins...)</span>
-                <span class="method-start">7639 ms</span>
+                <span class="method-name">afterTest([TestResult name=getAllUrlWithWidthGreaterThan1000 status=SUCCESS method=ValidateResponseBodyUsingJs...)</span>
+                <span class="method-start">4286 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">4288 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getAllWidthGreaterThan1000</span>
+                <span class="method-start">4289 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterTest([TestResult name=getAllWidthGreaterThan1000 status=SUCCESS method=ValidateResponseBodyUsingJsonPath....)</span>
+                <span class="method-start">4330 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">4333 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getID</span>
+                <span class="method-start">4333 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterTest([TestResult name=getID status=SUCCESS method=ValidateResponseBodyUsingJsonPath.getID()[pri:1, instan...)</span>
+                <span class="method-start">4366 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">4371 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getName</span>
+                <span class="method-start">4372 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterTest([TestResult name=getName status=SUCCESS method=ValidateResponseBodyUsingJsonPath.getName()[pri:2, in...)</span>
+                <span class="method-start">4425 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">4429 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getAllUrlsFrombackgroundImageScaled</span>
+                <span class="method-start">4430 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterTest([TestResult name=getAllUrlsFrombackgroundImageScaled status=SUCCESS method=ValidateResponseBodyUsing...)</span>
+                <span class="method-start">4737 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">4740 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getFirstElementInBGIScaled</span>
+                <span class="method-start">4741 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterTest([TestResult name=getFirstElementInBGIScaled status=SUCCESS method=ValidateResponseBodyUsingJsonPath....)</span>
+                <span class="method-start">4775 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
